.modman/Jumbobag_Core/src/skin/frontend/jumbobag/modern/css/styles.css
/* ... */
.configurable-swatch-box {
	background: none !important;
}
.configurable-swatch-box select.swatch-select {
	display: none;
}
.configurable-swatch-box .validation-advice {
	margin: 0 0 5px;
	background: #df280a;
	padding: 2px 5px !important;
	font-weight: bold;
	color: #fff !important;
	float: left;
	display: block;
	border-radius: 3px;
}
.product-view .product-img-box .product-image img {
	max-width: 100%;
	max-height: 750px;
	margin: 0px auto;
}
.product-view .product-img-box .product-image-zoom {
	z-index: 0;
}
.product-view .product-image-thumbs img {
	max-width: 100%;
	max-height: 100%;
}

.recemment-vus h3 {
    letter-spacing: 0 !important;
}

.recemment-vus .titles-wrapper .special-price {
	display: none;
}

.recemment-vus .titles-wrapper .special-price:last-child {
	display: block;
}

.recemment-vus .titles-wrapper h4 {
	display: none;
}

.recemment-vus .minimal-price-link,
.recemment-vus .price-box .old-price {
	text-align: right;
}

.recemment-vus .minimal-price-link span.label {
	float: none;
	text-transform: initial;
}


.recemment-vus .product .btn-wrapper a {
	color: white;
}

body.fixbandesbleues .presentation-produit-wrapper, 
body.fixbandesbleues .entretien-wrapper {
	background:transparent !important;
}

